--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
+    "resolveJsonModule": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "allowSyntheticDefaultImports":true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
