--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@auth0/angular-jwt": "^5.2.0",
     "flowbite": "^2.2.0",
     "html2pdf.js": "^0.10.1",
+    "ngx-sortablejs": "^11.1.0",
     "primeng": "^17.0.0-beta.1",
     "rxjs": "~7.8.0",
+    "sortablejs": "^1.15.6",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
@@ -34,6 +36,7 @@
     "@angular/cli": "^16.2.8",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/sortablejs": "^1.15.8",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
