--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html2pdf.js": "^0.10.1",
     "ngx-sortablejs": "^11.1.0",
     "primeng": "^17.0.0-beta.1",
+    "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "sortablejs": "^1.15.6",
     "tslib": "^2.3.0",
